# Raspi-FRC-Bot

./: LICENSE  README.md  UTAP CODE.code-workspace
CTRE-Phoenix-Stuff/: CMakeLists.txt  Radio_Drive.cpp  example.cpp  radio.cpp  radio_test.cpp  read_sbus_from_GPIO.py  test.py
CTRE-Phoenix-Stuff/Read_Json/: CMakeLists.txt
CTRE-Phoenix-Stuff/include/: radio.h
CTRE-Phoenix-Stuff/include/Read_Json/: CMakeLists.txt
CTRE-Phoenix-Stuff/include/Read_Json/Include/: Read_JSON.cpp  Read_JSON.h
CTRE-Phoenix-Stuff/include/ras-sbus/src/common/include/sbus/: sbus_packet.h
CTRE-Phoenix-Stuff/include/ras-sbus/src/decoder/include/sbus/: DecoderFSM.h  packet_decoder.h
CTRE-Phoenix-Stuff/include/ras-sbus/src/driver/include/: SBUS.h
CTRE-Phoenix-Stuff/navXTimeSync/: CMakeLists.txt
src/: CMakeLists.txt  Controller_Drive.cpp  Radio_Drive.cpp
src/Read_Json/: Read_JSON.cpp  Read_JSON.h
